--- a/index.html
+++ b/index.html
@@ -14,21 +14,51 @@
 
     <title>Frontend Mentor | Bento grid</title>
 
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
     <link rel="stylesheet" href="assets/css/index.css" />
   </head>
   <body>
-    Social Media 10x Faster with AI Over 4,000 5-star reviews Manage multiple
-    accounts and platforms. Maintain a consistent posting schedule. Schedule to
-    social media. Optimize post timings to publish content at the perfect time
-    for your audience. Grow followers with non-stop content. >56% faster
-    audience growth Create and schedule content quicker. Write your content
-    using AI.
+    <div class="bento-grid">
+      <div class="item">
+        <div class="lg-text">Create and schedule content <em>quicker.</em></em></div>
+        <img src="assets/images/illustration-create-post.webp" alt="" />
+      </div>
 
-    <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge">Frontend Mentor</a>.
-      Coded by <a href="#">Brandon Arias</a>.
+      <div class="item">
+        <p class="xlg-text">Social Media <span class="emphasis">10x</span> <em>Faster</em> with AI</p>
+        <img src="assets/images/illustration-five-stars.webp" alt="" />
+        <p class="sm-text">Over 4,000 5-star reviews</p>
+      </div>
+
+      <div class="item">
+        <p class="lg-text">Schedule to social media.</p>
+        <img src="assets/images/illustration-schedule-posts.webp" alt="" />
+        <p class="sm-text">Optimize post timings to publish content at the perfect time for your audience.</p>
+      </div>
+
+      <div class="item">
+        <p class="lg-text">Write your content using AI.</p>
+        <img src="assets/images/illustration-ai-content.webp" alt="" />
+      </div>
+
+      <div class="item">
+        <img src="assets/images/illustration-multiple-platforms.webp" alt="" />
+        <p class="med-text">Manage multiple accounts and platforms.</p>
+      </div>
+
+      <div class="item">
+        <p class="med-text">Maintain a consistent posting schedule.</p>
+        <img src="assets/images/illustration-consistent-schedule.webp" alt="" />
+      </div>
+
+      <div class="item">
+        <p class="sm-text"><span class="xlg-text">>56%</span> faster audience growth</p>
+        <img src="assets/images/illustration-audience-growth.webp" alt="" />
+      </div>
+
+      <div class="item">
+        <img src="assets/images/illustration-grow-followers.webp" alt="" />
+        <p class="lg-text">Grow followers with non-stop content.</p>
+      </div>
     </div>
   </body>
 </html>
